// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders 1`] = `
<button
  className="css-1ht4jl3"
  dangerouslySetInnerHTML={
    Object {
      "__html": ".",
    }
  }
  onClick={[Function]}
/>
`;

exports[`<Button /> renders with className 1`] = `
<button
  className="css-mtanlf"
  dangerouslySetInnerHTML={
    Object {
      "__html": ".",
    }
  }
  onClick={[Function]}
/>
`;

exports[`<Button /> renders with html entities 1`] = `
<button
  className="css-1ht4jl3"
  dangerouslySetInnerHTML={
    Object {
      "__html": "&minus;",
    }
  }
  onClick={[Function]}
/>
`;
